--- a/troupon/static/scss/partials/_pages.scss
+++ b/troupon/static/scss/partials/_pages.scss
@@ -65,6 +65,14 @@ main > section.row {
     }
   }     
 
+  @media (max-width: 768px) {
+    padding: 0 10% 0 10%;
+  }
+
+  @media (max-width: 480px) {
+    padding: 0;
+  }
+  
   .price-specs {
     margin-bottom: 15px;
     p {
